# papilio

./: CLAUDE.md  README.md  demo.py  ingest.py  item.py  observation.py  pipeline.py  pyproject.toml  sigil.py  sigils.py  stage.py  stages.py
docs/: architecture.md  future-bicameral.md  glossary.md  model-integration.md  sigil-interchange-format.md
tests/: test_item.py  test_observation.py  test_pipeline.py  test_sigil.py  test_sigils.py  test_stage.py  test_stages.py
